--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ejson",
-  "version": "2.1.2",
+  "name": "@webantic/ejson",
+  "version": "2.1.3",
   "description": "EJSON - Extended and Extensible JSON library from Meteor made compatible for Nodejs and Browserify",
   "main": "index.js",
   "scripts": {
@@ -21,7 +21,7 @@
   "author": "Arnout Kazemier",
   "repository": {
     "type": "git",
-    "url": "git://github.com/primus/ejson.git"
+    "url": "git://github.com/webantic/ejson.git"
   },
   "license": "MIT",
   "dependencies": {
